--- a/CourseProject/CourseProject.csproj
+++ b/CourseProject/CourseProject.csproj
@@ -57,7 +57,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Checker.cs" />
+    <Compile Include="Inserts\InsertAuto.xaml.cs">
+      <DependentUpon>InsertAuto.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Inserts\InsertDefect.xaml.cs">
       <DependentUpon>InsertDefect.xaml</DependentUpon>
     </Compile>
@@ -73,19 +75,13 @@
     <Compile Include="Inserts\InsertStorage.xaml.cs">
       <DependentUpon>InsertStorage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Inserts\WindowInserts.xaml.cs">
-      <DependentUpon>WindowInserts.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Inserts\InsertDetail.xaml.cs">
       <DependentUpon>InsertDetail.xaml</DependentUpon>
     </Compile>
     <Compile Include="Inserts\InsertOrder.xaml.cs">
       <DependentUpon>InsertOrder.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Tables.xaml.cs">
-      <DependentUpon>Tables.xaml</DependentUpon>
-    </Compile>
-    <Page Include="DBSettings.xaml">
+    <Page Include="Inserts\InsertAuto.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -109,10 +105,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Inserts\WindowInserts.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Inserts\InsertDetail.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -130,17 +122,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Connector.cs" />
-    <Compile Include="DBSettings.xaml.cs">
-      <DependentUpon>DBSettings.xaml</DependentUpon>
-    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Tables.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
