Added class diagram, addition of order in db, addition new car in db and trigger

--- a/CourseProject/CourseProject.csproj
+++ b/CourseProject/CourseProject.csproj
@@ -176,6 +176,7 @@
     <Content Include="Manual.chm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="ClassDiagram.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
