--- a/CourseProject/packages.config
+++ b/CourseProject/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.ReportViewer.Runtime.Common" version="12.0.2402.15" targetFramework="net461" />
   <package id="Microsoft.ReportViewer.WinForms.v12" version="12.0.0.1" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Types" version="12.0.5000.0" targetFramework="net461" />
 </packages>
